--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,9 +1,14 @@
 <section class="containerPrincipal">
     <form class="containerForm" id="containerForm">
         <label for="nombre">Buscar Juego:</label>
-        <input type="text" id="nombre" name="nombre" placeholder="Ingrese el nombre" (keyup)="filtrarJuegos($event)">
+        <input  type="text" name= "search" [(ngModel)] = "search"  (keyup)="filtrarJuegos()">
         <button id="enviar">Enviar</button>
     </form>
-    <ul id="lista"></ul>
+    <ul id="lista">
+        
+    </ul>
+    <ul *ngFor = "let e of filterList" >
+       <li class = "juego" (click) = seleccionarJuego(e.name)> {{e.name}} </li>
+    </ul>
 </section>
 
