--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <search-bar title = "Hola"></search-bar>
+  <search-bar></search-bar>
 </body>
 </html>
