comunicacion de componentes

--- a/src/app/comparador/comparador.component.html
+++ b/src/app/comparador/comparador.component.html
@@ -1,3 +1,6 @@
+\<!--  
+<search-bar></search-bar>
+
 <div *ngFor = "let j of juegosBuscados">
     <div *ngIf = "j.nombre === juegoRandom; else elseBlock"> 
         <p> ¡Has acertado! </p>
@@ -6,3 +9,4 @@
         <p> {{j.name}} </p>
     </ng-template>
 </div>
+    -->
