--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,11 +1,11 @@
 <section class="containerPrincipal">
     <form class="containerForm" id="containerForm">
         <label for="nombre">Buscar Juego:</label>
-        <input  type="text" name= "search" [(ngModel)] = "search"  (keyup)="filtrarJuegos()">
-        <button id="enviar">Enviar</button>
+        <input  type="text" name= "search" [(ngModel)] = "search"  (keyup)="filterGame()">
+        <button id="enviar" (click)="triggerButton()">Enviar</button>
     </form>
     <ul *ngFor = "let e of filterList" >
-       <li class = "juego" (click) = seleccionarJuego(e.name)> {{e.name}} </li>
+       <li class = "juego" (click) = selectGame(e.name)> {{e.name}} </li>
     </ul>
 </section>
 
