--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -1,27 +1,32 @@
 /* Estilos para el contenedor principal */
 .containerPrincipal {
     text-align: center;
+    font-family: 'Noto Sans', sans-serif;
+    color: gray;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
+
+
   
   /* Estilos para la barra de búsqueda un poco más grande */
   .containerForm {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     margin: 0 auto;
-    background: white;
-    border: 1px solid #ccc;
+    background-color: #171d25;
+    border: 2px solid #75b7e6;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 15px; /* Aumenta el padding para hacerla un poco más grande */
   }
   
-  label {
-    font-size: 20px; /* Hacer el texto un poco más grande */
-    display: block;
-  }
   
   input[type="text"] {
     width: 100%;
@@ -29,22 +34,22 @@
     font-size: 16px; /* Tamaño de fuente normal */
     border: none;
     outline: none;
+    background-color: #171d25;
+    color: #75b7e6;
+    font-family: 'Noto Sans', sans-serif;
   }
   
   /* Estilos para el contenedor de resultados un poco más pequeños */
   ul {
     list-style: none;
     padding: 0;
-    background: white;
-    border: 1px solid #ccc;
-    margin-top: 10px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    max-height: 200px;
-    overflow-y: auto;
-    width: 100%; /* Misma anchura que la barra de búsqueda */
+    max-height: 500px;
+    width: 600px; /* Misma anchura que la barra de búsqueda */
+    background-color: #344253;
+    overflow: auto;
+    margin-top: 3px;
   }
-  
+
   .juego {
     padding: 5px; /* Reduce el padding para hacer los elementos más pequeños */
     cursor: pointer;
@@ -55,3 +60,31 @@
   .juego:hover {
     background-color: #f0f0f0;
   }
+
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: none;
+    scrollbar-color: #75b7e6 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background-color: #171d25;
+    
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #75b7e6;
+  border-radius: 5px;
+  }
+
+  img:hover{
+    cursor: pointer;
+  }
+
+  
