--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: #1b2838;
+}
+
+comparator search-bar{
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+}
