agregado de rutas y la vista index

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <app-header></app-header>
-  <comparator></comparator>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </body>
 </html>
