--- a/src/app/comparador/comparador.component.html
+++ b/src/app/comparador/comparador.component.html
@@ -1,6 +1,9 @@
-<search-bar (button) = "addGame($event)"></search-bar>
-<button *ngIf = "searchedGames.length >= 5 && !hint" (click) = setHintTrue()> Pista</button>
-<img *ngIf = "hint"  src="randomGame.image" alt = "randomGame.name image" style="width: 100px; height: 100px;">
-<div *ngFor = "let s of searchedGames">
-    <app-compared-game  [userGame]= 's' [systemGame] = "randomGame" ></app-compared-game>
-</div>
+
+  <button *ngIf = "searchedGames.length >= 1 && !hint" (click) = setHintTrue()> Pista</button>
+  <img *ngIf = "hint"  src="{{randomGame.image}}" alt = "randomGame.name image" style="width: 100px; height: 100px;">
+  <search-bar (button)="addGame($event)"></search-bar>
+  <div class="comparedGames">
+    <app-compared-game  *ngFor = "let s of searchedGames" [userGame]= 's' [systemGame] = "randomGame" ></app-compared-game>
+  </div>
+
+
