--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,7 +5,7 @@ footer{
     justify-content: center;
     bottom: 0;
     margin-top: auto;
-    position:absolute;
+    position:relative;
     width: 100%;
 }
 a img{
