--- a/src/app/comparador/comparador.component.css
+++ b/src/app/comparador/comparador.component.css
@@ -2,10 +2,10 @@
     text-align: center;
     font-family: 'Noto Sans', sans-serif;
     color: gray;
-    width: 100%;
+    width: 70vw;
     display: flex;
-    flex-direction: line;
-    align-items: center;
+    align-items: start;
+    flex-direction: column;
 }
 
 search-bar{
