--- a/src/app/compared-game/compared-game.component.css
+++ b/src/app/compared-game/compared-game.component.css
@@ -17,3 +17,56 @@
     color: red;
     font-weight: bold;
 }
+
+li{
+    display: flex;
+    flex-direction: row;
+    max-height: 220px;
+    justify-content: center;
+}
+
+.imagen{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    width: 200px;
+}
+.imagen img{
+    height: 100%;
+    width: 100%;
+}
+
+.list{
+    max-width: 60vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.list li{
+    margin: 5px;
+}
+
+.tags{
+    background-color: gray;
+    border-radius: 5px;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    white-space: nowrap;
+    font-weight: lighter;
+}
+
+.tagsdirection{
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
