--- a/src/app/compared-game/compared-game.component.html
+++ b/src/app/compared-game/compared-game.component.html
@@ -1,12 +1,16 @@
 <li>
+    <div class="imagen">
     <h3>{{userGame.name}}</h3>
-    <img src = "{{userGame.image}}" alt = "{{userGame.name}} image" style="width: 100px; height: 100px;">
-    <ul>
+    <img src = "{{userGame.image}}" alt = "{{userGame.name}} image">
+    </div>
+    <ul class = "list">
         <li [ngClass]="compareNumber(userGame.rating,systemGame.rating)">valoracion: {{userGame.rating}}</li>
         <li [ngClass]="compareString(d,systemGame.developers)" *ngFor = "let d of userGame.developers"> desarrollador: {{d}} </li>
         <li [ngClass]="compareDate(userGame.relased,systemGame.relased)"> Fecha de Lanzamiento: {{userGame.relased[2]}}/{{userGame.relased[1]}}/{{userGame.relased[0]}} </li>
         <li [ngClass]="compareString(g,systemGame.genders)" *ngFor = "let g of userGame.genders"> genero: {{g}} </li>
-        <li [ngClass]="compareString(t,systemGame.tags)"  *ngFor = "let t of userGame.tags"> tags: {{t}} </li>
+        <div class="tagsdirection">
+        <li class="tags" [ngClass]="compareString(t,systemGame.tags)"  *ngFor = "let t of userGame.tags"> {{t}} </li>
+        </div>
     </ul>
     <h3 *ngIf = "userGame.name === systemGame.name"> Ganaste... Has Acertado!!!</h3>
 </li>
