--- a/src/app/comparador/comparador.component.css
+++ b/src/app/comparador/comparador.component.css
@@ -2,10 +2,10 @@
     text-align: center;
     font-family: 'Noto Sans', sans-serif;
     color: gray;
-    width: 70vw;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
+    margin: 20px;
 }
 
 search-bar{
