--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,5 +6,6 @@
     </ul>
     <ul class="Games">
         <li><a routerLink="app-game1" routerLinkActive="active" ariaCurrentWhenActive="page">Game 1</a></li>
+        <li><a routerLink="app-game2" routerLinkActive="active" ariaCurrentWhenActive="page">Game 2</a></li>
     </ul>
 </div>
