--- a/src/app/compared-game/compared-game.component.css
+++ b/src/app/compared-game/compared-game.component.css
@@ -1,20 +1,20 @@
 .redMax{
-    color: red;
+    background-color: red;
     font-weight: bold;
 }
 
 .redMin{
-    color: red;
+    background-color: red;
     font-weight: bold;
 }
 
 .green{
-    color: green;
+    background-color: green;
     font-weight: bold;
 }
 
 .red{
-    color: red;
+    background-color: red;
     font-weight: bold;
 }
 
@@ -26,25 +26,81 @@ li{
     animation: lista 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+
 .imagen{
     display: flex;
-    flex-direction: column;
+    justify-content: center;   
 }
 
-.imagen img{
-    width: 200px;
-    height: 200px;
+.imagen h3{
+    position: absolute;
+    opacity: 0;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
 }
+.imagen img{
+    width: 130px;
+    height: 130px;
+    border-radius: 15px;
+}
+.imagen:hover >h3{
+    opacity: 1;  
+}
+
 
 
 .list{
     display: flex;
     flex-direction: row;  
     align-items: center;    
+    justify-content: center;
 }
 
 
- @keyframes lista {
+@keyframes bar {
+    0%{
+        overflow: hidden;
+    }
+    100%{
+        overflow: auto;
+    }
+    
+}
+
+.tags {
+    color: black;
+    border-radius: 5px;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    font-weight: lighter;
+    animation-delay: 4s;
+}
+
+.tagsdirection{
+    max-height: 130px;
+    overflow: auto;
+    animation: bar 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation-delay:4s;
+}
+
+
+
+.item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 130px;
+    border-radius: 10px;
+}
+
+
+
+@keyframes lista {
     0% {
       transform: scale(0);
       opacity: 1;
@@ -56,23 +112,27 @@ li{
   }
   
 
-.tags{
-    background-color: gray;
-    border-radius: 5px;
-    font-size: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-    white-space: nowrap;
-    font-weight: lighter;
+.imagen:nth-child(1){
+    animation-delay: 0s;
+}  
+.item:nth-child(1){
+    animation-delay: 0.5s;
 }
-
-.tagsdirection{
-    width: 100%;
-    height: 100%;
-    padding: 30px;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+.item:nth-child(2){
+    animation-delay: 1s;
+}
+.item:nth-child(3){
+    animation-delay: 1.5s;
+}
+.item:nth-child(4){
+    animation-delay: 2s;
+}
+.item:nth-child(5){
+    animation-delay: 2.5s;
+}
+.item:nth-child(6){
+    animation-delay: 3s;
+}
+.item:nth-child(7){
+    animation-delay: 3.5s;
 }
