--- a/src/app/comparador/comparador.component.css
+++ b/src/app/comparador/comparador.component.css
@@ -40,4 +40,13 @@ search-bar{
     max-height: 200px;
 }
 
+.Stats{
+    background-color: #75b7e6;
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
 
