--- a/src/app/comparador/comparador.component.html
+++ b/src/app/comparador/comparador.component.html
@@ -1,11 +1,16 @@
+<section>
+  <p class="Stats">🔥Racha de Victorias {{getUserData().game1.winStreak}}🔥  👑Cantidad de Victorias {{getTotalWins()}}👑</p>
+</section>
 <section class = "comparatorContainter">
   <search-bar *ngIf="!getIsWin()" (button)="addGame($event)"></search-bar>
   <div class="pista">
     <button *ngIf = "getSearchedGames().length >= 3 && !hint" (click) = changeHintState()> Pista</button>
-    <img *ngIf = "hint"  src="{{getRandomGame().image}}" alt = "randomGame.name image" (click) = changeHintState() >´
+    <img *ngIf = "hint"  src="{{getRandomGame().image}}" alt = "randomGame.name image" (click) = changeHintState() >
   </div>
   <ul *ngIf="getRandomGame()" class="comparedGames">
     <app-compared-game  *ngFor = "let s of getSearchedGames()" [userGame]= 's' [systemGame] = "getRandomGame()" ></app-compared-game>
   </ul>
+  <app-wining-sing *ngIf = "getIsWin()" winingText="¡Ganaste!... Has adivinado el juego" 
+  shareText="Tu amigo a adivinado el juego del dia en {{getSearchedGames.length}} intentos, y te reta a superarlo: http://localhost:4200/app-game1"> </app-wining-sing>
 </section>
 
