--- a/src/app/comparador/comparador.component.css
+++ b/src/app/comparador/comparador.component.css
@@ -48,5 +48,7 @@ search-bar{
     justify-content: center;
     align-items: center;
     margin: 20px;
+    font-family: 'Noto Sans', sans-serif;
+    border-radius: 5px;
 }
 
