--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+}
+
 body{
     background-color: #1b2838;
     overflow-x: hidden;
+    min-height: 100%;
 }
 
  /* ===== Scrollbar CSS ===== */
