--- a/src/app/comparador/comparador.component.css
+++ b/src/app/comparador/comparador.component.css
@@ -52,3 +52,21 @@ search-bar{
     border-radius: 5px;
 }
 
+.Indice{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+
+.Indice li p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    border-radius: 10px;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+}
+
