--- a/src/app/comparador/comparador.component.html
+++ b/src/app/comparador/comparador.component.html
@@ -7,6 +7,16 @@
     <button *ngIf = "getSearchedGames().length >= 3 && !hint" (click) = changeHintState()> Pista</button>
     <img *ngIf = "hint"  src="{{getRandomGame().image}}" alt = "randomGame.name image" (click) = changeHintState() >
   </div>
+  
+  <ul class="Indice" *ngIf="getSearchedGames().length > 0">
+    <li><p>Juego</p></li>
+    <li><p>Valoracion</p></li>
+    <li><p>Desarrolladores</p></li>
+    <li><p>Lanzamiento</p></li>
+    <li><p>Generos</p></li>
+    <li><p>Tags</p></li>
+  </ul>
+    
   <ul *ngIf="getRandomGame()" class="comparedGames">
     <app-compared-game  *ngFor = "let s of getSearchedGames()" [userGame]= 's' [systemGame] = "getRandomGame()" ></app-compared-game>
   </ul>
