--- a/src/app/compared-game/compared-game.component.html
+++ b/src/app/compared-game/compared-game.component.html
@@ -3,9 +3,9 @@
     <ul class = "list">
         <li class="imagen"><h3>{{userGame.name}}</h3><img src = "{{userGame.image}}" alt = "{{userGame.name}} image"></li>
         <li class= "item" [ngClass]="compareNumber(userGame.rating,systemGame.rating)">{{userGame.rating}}</li>
-        <li class= "item" [ngClass]="compareString(d,systemGame.developers)" *ngFor = "let d of userGame.developers"> {{d}} </li>
+        <li class= "item" [ngClass]="compareArray(userGame.developers,systemGame.developers)"> <div class="arrays" > <p *ngFor="let d of userGame.developers"> {{d}} </p> </div></li>
         <li class= "item" [ngClass]="compareDate(userGame.relased,systemGame.relased)"> {{userGame.relased[2]}}/{{userGame.relased[1]}}/{{userGame.relased[0]}} </li>
-        <li class= "item" [ngClass]="compareString(g,systemGame.genders)" *ngFor = "let g of userGame.genders"> {{g}} </li>
+        <li class= "item" [ngClass]="compareArray(userGame.genders,systemGame.genders)"> <div class="arrays" > <p *ngFor="let g of userGame.genders">{{g}}</p> </div> </li>
         <div class="tagsdirection">
         <li class="tags" [ngClass]="compareString(t,systemGame.tags)"  *ngFor = "let t of userGame.tags"> {{t}} </li>
         </div>
