--- a/src/app/game2/game2.component.css
+++ b/src/app/game2/game2.component.css
@@ -14,24 +14,41 @@ section{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    min-height: 43vw;
 }
 
 section img{
-    max-width: 500px;
-    max-height: 500px;
+    width: 30%;
+    height: 30%;
     margin: 20px;
 }
 
-section p{
+section p {
     font-family: 'Noto Sans', sans-serif;
     font-weight: 900;
     color: #75b7e6;
     margin: 40px;
-    width: 100px;
     height: 100px;
     font-size: 80px;
+    text-align: center;
+}
 
+section span{
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 500;
+    padding: 10px;
+    color: #75b7e6;
+    font-size: 50px;
+    border-style: solid;
+    border-color: #75b7e6;
+    border-radius: 5px;
+}
+
+div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 20px;
 }
 
 
