--- a/src/app/game2/game2.component.html
+++ b/src/app/game2/game2.component.html
@@ -1,11 +1,15 @@
 <section *ngIf="!isGame">
+    <app-leadboard [leadboard]="getLeaderboardGame2()"></app-leadboard>
     <button (click)="starGame()">Start</button>
-
 </section>
 
 <section *ngIf="isGame">
-    <p>{{timer}}</p>
-    <search-bar (button)="ComparedGames($event)"></search-bar>
+    <div>
+    <p>{{timer}}</p> 
+    <span>Puntaje: {{puntaje}}</span>
+    </div>
     <img src="{{currentGame.image}}" alt="Game Image">
-    <button (click)="selectGame()">Next</button>
+    <search-bar (button)="ComparedGames($event)"></search-bar>
+    <br>
+    <button (click)="chengeGame()">Next</button>
 </section>
