--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,6 @@ body{
     background-color: #75b7e6;
   border-radius: 5px;
   }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
