--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,5 +7,6 @@
     <ul class="Games">
         <li><a routerLink="app-game1" routerLinkActive="active" ariaCurrentWhenActive="page">Game 1</a></li>
         <li><a routerLink="app-game2" routerLinkActive="active" ariaCurrentWhenActive="page">Game 2</a></li>
+        <li><a routerLink="app-game3" routerLinkActive="active" ariaCurrentWhenActive="page">Game 3</a></li>
     </ul>
 </div>
