--- a/src/app/score-form/score-form.component.html
+++ b/src/app/score-form/score-form.component.html
@@ -1,3 +1,4 @@
+<div>
 <h2>Nuevo record: {{data.score}}</h2>
 <form (ngSubmit)="onSumbit()">
   <mat-form-field>
@@ -7,3 +8,4 @@
   <button mat-raised-button color="primary" type="submit">Enviar</button>
 </form>
 <p>{{message}}</p>
+</div>
