--- a/src/app/wining-sing/wining-sing.component.html
+++ b/src/app/wining-sing/wining-sing.component.html
@@ -1,5 +1,6 @@
-<h1>{{winingText}}<h1>
+
 <section>
+    <h1>{{winingText}}</h1>
     <p> comparte tu resultado y reta a tus amigos:     </p>
     <button (click)="share()">compartir</button>
 </section>
