--- a/src/app/game2/game2.component.css
+++ b/src/app/game2/game2.component.css
@@ -1,12 +1,15 @@
 section button{
     background-color: #75b7e6;
     font-family: 'Noto Sans', sans-serif;
-    font-size: large;
+    font-size: 30px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-weight: 900;
     color: #171d25;
+    width: 100px;
+    height: 60px;   
+    margin: 30px;
 }
 
 section{
@@ -17,8 +20,8 @@ section{
 }
 
 section img{
-    width: 30%;
-    height: 30%;
+    width: 500px;
+    height: 300px;
     margin: 20px;
 }
 
@@ -51,4 +54,7 @@ div{
     margin: 20px;
 }
 
+section{
+    min-height: 86%;
+}
 
