--- a/src/app/game3/game3.component.css
+++ b/src/app/game3/game3.component.css
@@ -1,23 +1,98 @@
 
-.imagen{
+.juego{
     display: flex;
-    justify-content: center;   
+    justify-content: space-between;
+    width: 100%;
+    height: 86%;
+}
+
+.menu{
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+height: 86%;
+}
+
+.menu button{
+    background-color: #75b7e6;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 900;
+    color: #171d25;
+    width: 100px;
+    height: 60px;   
+    margin: 30px;
+}
+img{
+    width: 50vw;
+    height: 100%;
+    opacity: 0.5;
+    filter: alpha(opacity=100);
+    zoom: 1;
 }
 
 .imagen h3{
     position: absolute;
-    opacity: 0;
-    color: black;
-    background-color: white;
+    color: white;
+}
+
+
+.imagen{
+    position: relative;
+}
+
+span{
+    position: absolute;
+}
+
+
+.score{
+    position: absolute;
+    top: 90%;
+    left: 5%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 60px;
+    z-index: 1;
+    font-size: 30px;
+    color: white;
+}
+
+.imagen .actual{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 60px;
+    font-size: 50px;
+    color:white;
+}
+
+.botones{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 60px;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+button{
+    background-color: gray;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 20px;
+    border: none;
     border-radius: 5px;
-}
-
-.imagen:hover >h3{
-    opacity: 1;  
-}
-
-.imagen img{
-    width: 130px;
-    height: 130px;
-    border-radius: 15px;
+    cursor: pointer;
+    font-weight: 900;
+    color: #171d25;  
+    margin: 10px;
 }
