--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 html{
   height: 100%;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 body{
@@ -37,4 +38,4 @@ body{
   }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
