--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="header">
     <ul class="menu">
-        <li><a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">STEAMDLE</a></li>
-        <li><a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page"><img src="https://icones.pro/wp-content/uploads/2022/05/icone-steam-grise.png" alt=""></a></li>
+        <li><a routerLink="jsonData" routerLinkActive="active" ariaCurrentWhenActive="page">STEAMDLE</a></li>
+        <li><a routerLink="jsonData" routerLinkActive="active" ariaCurrentWhenActive="page"><img src="https://icones.pro/wp-content/uploads/2022/05/icone-steam-grise.png" alt=""></a></li>
         
     </ul>
     <ul class="Games">
-        <li><a routerLink="app-game1" routerLinkActive="active" ariaCurrentWhenActive="page">Game 1</a></li>
+        <li><a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">Game 1</a></li>
         <li><a routerLink="app-game2" routerLinkActive="active" ariaCurrentWhenActive="page">Game 2</a></li>
         <li><a routerLink="app-game3" routerLinkActive="active" ariaCurrentWhenActive="page">Game 3</a></li>
     </ul>
