--- a/src/app/game2/game2.component.css
+++ b/src/app/game2/game2.component.css
@@ -1,3 +1,18 @@
+.red{
+    color: red;
+    border-color: red;
+}
+
+.green{
+    color: green;
+    border-color: green;
+}
+
+.white{
+    color: #75b7e6;
+    border-color: #75b7e6;
+}
+
 section button{
     background-color: #75b7e6;
     font-family: 'Noto Sans', sans-serif;
@@ -12,6 +27,18 @@ section button{
     margin: 30px;
 }
 
+.menu button{
+    width: 100px;
+    height: 60px;   
+    margin: 30px; 
+}
+
+.game button{
+    width: 90px;
+    height: 50px;   
+    margin: 20px; 
+}
+
 section{
     display: flex;
     align-items: center;
@@ -22,13 +49,12 @@ section{
 section img{
     width: 500px;
     height: 300px;
-    margin: 20px;
+    margin: 5px;
 }
 
 section p {
     font-family: 'Noto Sans', sans-serif;
     font-weight: 900;
-    color: #75b7e6;
     margin: 40px;
     height: 100px;
     font-size: 80px;
@@ -39,10 +65,8 @@ section span{
     font-family: 'Noto Sans', sans-serif;
     font-weight: 500;
     padding: 10px;
-    color: #75b7e6;
     font-size: 50px;
     border-style: solid;
-    border-color: #75b7e6;
     border-radius: 5px;
 }
 
@@ -51,10 +75,14 @@ div{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 20px;
+    margin: 10px;
 }
 
-section{
+.menu{
     min-height: 86%;
+}
+
+.game{
+    height: 89%;
 }
 
