--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -18,19 +18,20 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
+    height: 58px;
     max-width: 600px;
     margin: 0 auto;
     background-color: #171d25;
     border: 2px solid #75b7e6;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    padding: 15px; /* Aumenta el padding para hacerla un poco más grande */
+    padding: 10px; /* Aumenta el padding para hacerla un poco más grande */
   }
   
   
   input[type="text"] {
     width: 100%;
-    padding: 10px; /* Mantiene el tamaño del input */
+    height: 100%;
     font-size: 16px; /* Tamaño de fuente normal */
     border: none;
     outline: none;
